--- a/index.html
+++ b/index.html
@@ -1,32 +1,17 @@
 <!DOCTYPE html>
 <html lang="sk">
 <head>
-
-
-  <!-- --- META TAGY --- -->
-  <!-- pre automatické prispôsobovanie obsahu voči screenu -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- nastavenie kódovania znakov -->
-  <meta charset="utf-8">
-  <!-- popis obsahu webu (danej podstránky) -->
-  <meta name="description" content="Niečo o D&D...">
-
-
+  <meta charset="UTF-8">
   <title>D&D Úvod</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
-  <link rel="shortcut icon" href="images/dndlogod20.png">
-  <!-- ako ikona sa používa skôr toto a vo formáte .ico ale môžeš nechať aj to tvoje ako shortcut -->
-  <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
-
-  
+  <link rel="shortcut icon" href="images/dndlogod20.png" />
 </head>
 <body>
 
   <header>
     <h1>Dungeons & Dragons</h1>
-    <nav role="navigation" aria-label="navigácia"></nav>>
+    <nav>
       <ul>
         <li><a href="index.html">Domov</a></li>
         <li><a href="races.html">Rasy</a></li>
@@ -38,7 +23,7 @@
     </nav>
   </header>
 
-  <main role="main">
+  <main>
     <div class="content">
       <div class="center">
         <h1>Čo je to D&D?</h1>
@@ -51,9 +36,9 @@
       
         <h1>Ako to funguje?</h1>
         <p>
-          Jeden hráč sa stane <strong>Dungeon Master</strong> - rozpráva príbeh, ovláda príšery a opisuje svet.<br>
+          Jeden hráč sa stane <strong>Dungeon Master</strong> – rozpráva príbeh, ovláda príšery a opisuje svet.<br>
           Ostatní si vytvoria <strong>svoje postavy</strong> z rôznych klás a rás, v nekonečno kombináciách.<br>
-          Rozprávate, čo chcete urobiť, hodíte kockami, a príbeh sa odvíja ďalej - <strong>žiadne dve hry nie sú rovnaké</strong>.<br>
+          Rozprávate, čo chcete urobiť, hodíte kockami, a príbeh sa odvíja ďalej – <strong>žiadne dve hry nie sú rovnaké</strong>.<br>
         </p>
         <img src="images/table.jpg" alt="Stol" width="800" style="border-radius:15px;">
       
@@ -62,7 +47,7 @@
           D&D nie je o víťazstve alebo prehre. Je to o <strong>spolupráci, kreativite a zábave</strong>.<br>
           Môžete sa smiať, keď váš kúzelník omylom vystrelí ohnivú guľu do vlastnej party, alebo oslavovať,<br>
           keď konečne porazíte draka, ktorý terabil dedinu.<br>
-          Potrebujete len <strong>papier, ceruzku, kocky a predstavivosť</strong>. Všetko ostatné príde samo - a tento web vám ukáže, ako začať.<br>
+          Potrebujete len <strong>papier, ceruzku, kocky a predstavivosť</strong>. Všetko ostatné príde samo – a tento web vám ukáže, ako začať.<br>
         </p>
         <img src="images/dnd.jpg" alt="Boj" width="800" style="border-radius:15px;">
 
