--- a/spells.html
+++ b/spells.html
@@ -56,31 +56,31 @@
               <th style="width:35%">Poškodenie</th>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/BurningHands.jpg" alt="BurningHands" width="100" style="border-radius:15px;"></td>
+              <td><img src="images/spells/BurningHands.jpg" class="no-shadow" alt="BurningHands"></td>
               <td>Burning hands</td>
               <td>Blízky boj s oblasťou účinku 9m (kužeľ)</td>
               <td>3d6 Ohňové poškodenie</td>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/IceKnife.jpg" alt="IceKnife" width="100" style="border-radius:15px;"></td>
+              <td><img src="images/spells/IceKnife.jpg" class="no-shadow" alt="IceKnife" width="100"></td>
               <td>Ice knife</td>
               <td>Na diaľku</td>
               <td>1d10 Bodné poškodenie + 2d6 Chladné poškodenie</td>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/WitchBolt.jpg" alt="WitchBolt" width="100" style="border-radius:15px;"></td>
+              <td><img src="images/spells/WitchBolt.jpg" class="no-shadow" alt="WitchBolt"></td>
               <td>Witch bolt</td>
               <td>Na diaľku</td>
               <td>1d12 Bleskové poškodenie</td>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/MagicMissile.jpg" alt="MagicMissile" width="100" style="border-radius:15px;"></td>
+              <td><img src="images/spells/MagicMissile.jpg" class="no-shadow" alt="MagicMissile"></td>
               <td>Magic Missile</td>
               <td>Na diaľku</td>
               <td>3d4 + 3 Silove poškodenie</td>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/RayofSickness.jpg" alt="RayofSickness" width="100" style="border-radius:15px;"></td>
+              <td><img src="images/spells/RayofSickness.jpg" class="no-shadow" alt="RayofSickness"></td>
               <td>Ray of Sickness</td>
               <td>Na diaľku</td>
               <td>2d8 Jedovaté poškodenie</td>
@@ -102,31 +102,31 @@
               <th style="width:35%">Poškodenie</th>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/CloudofDaggers.jpg" alt="CloudofDaggers" width="100" style="border-radius:15px;"></td>
+              <td><img src="images/spells/CloudofDaggers.jpg" class="no-shadow" alt="CloudofDaggers"></td>
               <td>Cloud of Daggers</td>
               <td>Na diaľku</td>
               <td>4d4 Sečné poškodenie každé kolo na 10 kôl</td>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/ScorchingRay.jpg" alt="ScorchingRay" width="100" style="border-radius:15px;"></td>
+              <td><img src="images/spells/ScorchingRay.jpg" class="no-shadow" alt="ScorchingRay"></td>
               <td>Scorching Ray</td>
               <td>Na diaľku</td>
               <td>6d6 Ohňové poškodenie</td>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/Shatter.jpg" alt="Shatter" width="100" style="border-radius:15px;"></td>
+              <td><img src="images/spells/Shatter.jpg" class="no-shadow" alt="Shatter"></td>
               <td>Shatter</td>
               <td>Na diaľku s oblasťou účinku 3m (kruh)</td>
               <td>3d8 Hromové poškodenie</td>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/Melf'sAcidArrow.jpg" alt="Melf'sAcidArrow" width="100" style="border-radius:15px;"></td>
+              <td><img src="images/spells/Melf'sAcidArrow.jpg" class="no-shadow" alt="Melf'sAcidArrow"></td>
               <td>Melf's Acid Arrow</td>
               <td>Na diaľku</td>
               <td>4d4 Žieravé poškodenie + 4d4 oneskorené žieravé poškodenie</td>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/ShadowBlade.jpg" alt="ShadowBlade" width="100" style="border-radius:15px;"></td>
+              <td><img src="images/spells/ShadowBlade.jpg" class="no-shadow" alt="ShadowBlade"></td>
               <td>Shadow Blade</td>
               <td>Blízky boj</td>
               <td>2d8 Psychické poškodenie</td>
@@ -148,32 +148,32 @@
               <th style="width:35%">Poškodenie</th>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/Fireball.jpg" alt="Fireball" width="100" style="border-radius:15px;"></td>
+              <td><img src="images/spells/Fireball.jpg" class="no-shadow" alt="Fireball"></td>
               <td>Fireball</td>
               <td>Na diaľku s oblasťou účinku 4m (kruh)</td>
               <td>8d6 Ohňové poškodenie</td>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/GlyphofWarding.jpg" alt="GlyphofWarding" width="100" style="border-radius:15px;"></td>
+              <td><img src="images/spells/GlyphofWarding.jpg" class="no-shadow" alt="GlyphofWarding"></td>
               <td>Glyph of Warding</td>
               <td>Na diaľku s oblasťou účinku 4m (kruh)</td>
               <td>5d8 Ohňové, Chladné, Bleskové, Žieravé, Jedovaté alebo Hromové poškodenie<br>
                   (možnosť výberu jedného)</td>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/LightningBolt.jpg" alt="LightningBolt" width="100" style="border-radius:15px;"></td>
+              <td><img src="images/spells/LightningBolt.jpg" class="no-shadow" alt="LightningBolt"></td>
               <td>Lightning Bolt</td>
               <td>Na diaľku s oblasťou účinku 30m (čiara)</td>
               <td>8d6 Bleskové poškodenie</td>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/VampiricTouch.jpg" alt="VampiricTouch" width="100" style="border-radius:15px;"></td>
+              <td><img src="images/spells/VampiricTouch.jpg" class="no-shadow" alt="VampiricTouch"></td>
               <td>Vampiric Touch</td>
               <td>Blízky boj</td>
               <td>3d6 Nekrotické poškodenie</td>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/Counterspell.jpg" alt="Counterspell" width="100" style="border-radius:15px;"></td>
+              <td><img src="images/spells/Counterspell.jpg" class="no-shadow" alt="Counterspell" width="100"></td>
               <td>Counterspell</td>
               <td>Reakcia</td>
               <td>Umožňuje kúzelníkom prerušiť hádzanie kúzla iného kúzelníka, čím kúzlo zlyhá a nemá žiadny účinok.</td>
@@ -195,31 +195,31 @@
               <th style="width:35%">Poškodenie</th>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/Blight.jpg" alt="Blight" width="100" style="border-radius:15px;"></td>
+              <td><img src="images/spells/Blight.jpg" class="no-shadow" alt="Blight" width="100"></td>
               <td>Blight</td>
               <td>Boj na diaľku</td>
               <td>8d8 Nekrotické poškodenie</td>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/IceStorm.jpg" alt="IceStorm" width="100" style="border-radius:15px;"></td>
+              <td><img src="images/spells/IceStorm.jpg" class="no-shadow" alt="IceStorm"></td>
               <td>Ice Storm</td>
               <td>Boj na diaľku s oblasťou účinku 6m (kruh)</td>
               <td>2d8 Drvivé poškodenie + 4d6 Chladné poškodenie</td>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/ConjureMinorElementalAzer.jpg" alt="ConjureMinorElemental" width="100" style="border-radius:15px;"></td>
+              <td><img src="images/spells/ConjureMinorElementalAzer.jpg" class="no-shadow" alt="ConjureMinorElemental"></td>
               <td>Conjure Minor Elemental</td>
               <td>Vyvolanie</td>
               <td>Vyvolanie menšieho elementála ktorý bude bojovať po vašom boku</td>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/WallofFire.jpg" alt="WallofFire" width="100" style="border-radius:15px;"></td>
+              <td><img src="images/spells/WallofFire.jpg" class="no-shadow" alt="WallofFire"></td>
               <td>Wall of Fire</td>
               <td>Boj na diaľku s oblasťou účinku 36m (čiara)</td>
               <td>5d8 Ohňové poškodenie</td>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/PhantasmalKiller.jpg" alt="PhantasmalKiller" width="100" style="border-radius:15px;"></td>
+              <td><img src="images/spells/PhantasmalKiller.jpg" class="no-shadow" alt="PhantasmalKiller"></td>
               <td>Phantasmal Killer</td>
               <td>Boj na diaľku</td>
               <td>4d10 Psychické poškodenie</td>
@@ -241,32 +241,32 @@
               <th style="width:35%">Poškodenie</th>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/ConeofCold.jpg" alt="ConeofCold" width="100" style="border-radius:15px;"></td>
+              <td><img src="images/spells/ConeofCold.jpg" class="no-shadow" alt="ConeofCold"></td>
               <td>Cone of Cold</td>
               <td>Blízky boj s oblasťou účinku 9m (kužeľ)</td>
               <td>8d8 Chladné poškodenie</td>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/Cloudkill.jpg" alt="Cloudkill" width="100" style="border-radius:15px;"></td>
+              <td><img src="images/spells/Cloudkill.jpg" class="no-shadow" alt="Cloudkill"></td>
               <td>Cloudkill</td>
               <td>Boj na diaľku s oblasťou účinku 6m (kruh)</td>
               <td>5d8 Jedovaté poškodenie</td>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/HoldMonster.jpg" alt="HoldMonster" width="100" style="border-radius:15px;"></td>
+              <td><img src="images/spells/HoldMonster.jpg" class="no-shadow" alt="HoldMonster"></td>
               <td>Hold Monster</td>
               <td>Akcia</td>
               <td>Umožňuje kúzelníkovi paralyzovať príšeru, čím jej zabráni konať.<br>
                   Spraví ho zraniteľným voči útokom.</td>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/ConjureElemental.jpg" alt="ConjureElemental" width="100" style="border-radius:15px;"></td>
+              <td><img src="images/spells/ConjureElemental.jpg" class="no-shadow" alt="ConjureElemental"></td>
               <td>Conjure Elemental</td>
               <td>Vyvolanie</td>
               <td>Umožňuje kúzelníkovi privolať ohňového, zemného, vodného alebo vzdušného elementála.</td>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/Telekinesis.jpg" alt="Telekinesis" width="100" style="border-radius:15px;"></td>
+              <td><img src="images/spells/Telekinesis.jpg" class="no-shadow" alt="Telekinesis"></td>
               <td>Telekinesis</td>
               <td>Akcia</td>
               <td>Umožňuje kúzelníkovi házať tvory a predmety len silou mysle.</td>
@@ -288,34 +288,34 @@
               <th style="width:35%">Poškodenie</th>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/ChainLightning.jpg" alt="ChainLightning" width="100" style="border-radius:15px;"></td>
+              <td><img src="images/spells/ChainLightning.jpg" class="no-shadow" alt="ChainLightning"></td>
               <td>Chain Lightning</td>
               <td>Boj na diaľku 1 primárny cieľ a 3 nepriatelia v okruhu 18 m</td>
               <td>10d8 Bleskové poškodenie</td>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/Disintegrate.jpg" alt="Disintegrate" width="100" style="border-radius:15px;"></td>
+              <td><img src="images/spells/Disintegrate.jpg" class="no-shadow" alt="Disintegrate"></td>
               <td>Disintegrate</td>
               <td>Boj na diaľku</td>
               <td>10d6 + 40 Silove poškodenie<br>
                   Záchranný hod DEX (DC kúzla) (pri úspechu: poškodenie sa neaplikuje)</td>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/Sunbeam.jpg" alt="Sunbeam" width="100" style="border-radius:15px;"></td>
+              <td><img src="images/spells/Sunbeam.jpg" class="no-shadow" alt="Sunbeam"></td>
               <td>Sunbeam</td>
               <td>Boj na diaľku s oblasťou účinku 18m (čiara)</td>
               <td>6d8 Žiariace poškodenie<br>
                   Záchranný hod CON (pri úspechu: ciele stále utrpia polovicu poškodenia)</td>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/CircleofDeath.jpg" alt="CircleofDeath" width="100" style="border-radius:15px;"></td>
+              <td><img src="images/spells/CircleofDeath.jpg" class="no-shadow" alt="CircleofDeath"></td>
               <td>Circle of Death</td>
               <td>Boj na diaľku s oblasťou účinku 9m (kruh)<br>
                   Záchranný hod CON (pri úspechu: ciele stále utrpia polovicu poškodenia)</td>
               <td>8d6 Nekrotické poškodenie</td>
             </tr>
             <tr style="height:100px">
-              <td><img src="images/spells/GlobeofInvulnerability.jpg" alt="GlobeofInvulnerability" width="100" style="border-radius:15px;"></td>
+              <td><img src="images/spells/GlobeofInvulnerability.jpg" class="no-shadow" alt="GlobeofInvulnerability"></td>
               <td>Globe of Invulnerability</td>
               <td>Akcia</td>
               <td>Vytvorenie bariery, ktorá robí tvory a predmety vo vnútri odolnými voči všetkému poškodeniu.</td>
