--- a/info.html
+++ b/info.html
@@ -90,7 +90,7 @@
   
         <p>Máš otázku? Napíš nám!</p>
   
-        <form id="form" action="#" method="post">
+        <form id="form" action="" method="get">
           <label for="name">Meno:</label><br>
           <input type="text" id="name" name="name"><br><br>
   
