--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="sk">
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="Vitaj vo svete Dungeons & Dragons! Objav pravidlá, rasy, povolania, zbrane a kúzla, ktoré ti pomôžu vytvoriť nezabudnuteľné dobrodružstvo.">
   <title>D&D Úvod</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
