--- a/races.html
+++ b/races.html
@@ -2,6 +2,7 @@
 <html lang="sk">
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="Preskúmaj rasy sveta Dungeons & Dragons – elfov, trpaslíkov, ľudí, orkov a ďalšie. Zisti ich schopnosti, výhody a príbehové pozadie.">
   <title>Rasy - D&D</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
