--- a/classes.html
+++ b/classes.html
@@ -2,6 +2,7 @@
 <html lang="sk">
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="Vyber si svoju triedu hrdinu! Nauč sa viac o klasách Dungeons & Dragons ako bojovník, čarodejník, tulák, klerik či paladín.">
   <title>Triedy - D&D</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
