--- a/weapons.html
+++ b/weapons.html
@@ -2,6 +2,7 @@
 <html lang="sk">
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="Prehľad všetkých zbraní v Dungeons & Dragons – od mečov a lukov po magické artefakty. Zisti ich vlastnosti, poškodenie a použitie v boji.">
   <title>Zbrane - D&D</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
