--- a/spells.html
+++ b/spells.html
@@ -2,6 +2,7 @@
 <html lang="sk">
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="Objav kúzla Dungeons & Dragons! Prezri si zoznam spellov podľa úrovní, tried a typov mágie, s detailnými popismi ich účinkov.">
   <title>Kúzla - D&D</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
