--- a/info.html
+++ b/info.html
@@ -2,6 +2,7 @@
 <html lang="sk">
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="Užitočné informácie o Dungeons & Dragons – pravidlá, tipy pre hráčov, odkazy na zdroje a nápady pre tvoju ďalšiu kampaň.">
   <title>Informácie o stránke a projekte</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
