--- a/classes.html
+++ b/classes.html
@@ -66,9 +66,9 @@
         <div class="race-text">
           <h1>Druid</h1>
           <p>
-          Druids belong to ancient orders that call on the forces of nature. Harnessing the magic of animals, plants, and the four elements, Druids heal, transform into animals, and wield elemental destruction.
-          Revering nature above all, individual Druids gain their magic from nature, a nature deity, or both, and they typically unite with other Druids to perform rites that mark the passage of the seasons and other natural cycles.
-          Druids are concerned with the delicate ecological balance that sustains plant and animal life and with the need for people to live in harmony with nature. Druids often guard sacred sites or watch over regions of unspoiled nature, but when a significant danger arises, Druids take a more active role as adventurers who combat the threat.
+          Druidi patria k starobylým rádom, ktoré čerpajú silu z prírodných síl. Využívajúc mágiu zvierat, rastlín a štyroch živlov, druidi liečia, premieňajú sa na zvieratá a ovládajú ničivú silu prírodných elementov.
+          Uctievajúc prírodu nadovšetko, jednotliví druidi získavajú svoju mágiu z prírody, od božstva prírody alebo z oboch zdrojov, a zvyčajne sa spájajú s inými druidmi, aby vykonávali obrady označujúce zmenu ročných období a iné prírodné cykly.
+          Druidi sa starajú o krehkú ekologickú rovnováhu, ktorá udržiava život rastlín a zvierat, a veria, že ľudia by mali žiť v súlade s prírodou. Často strážia posvätné miesta alebo dohliadajú na oblasti neporušenej prírody, no keď sa objaví vážna hrozba, druidi preberajú aktívnejšiu úlohu ako dobrodruhovia, ktorí proti nej bojujú.
           </p>
         </div>
         <img src="images/classes/druid.jpg" alt="Druid" style="width:100px;height:100px;">
