--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
           Rozprávate, čo chcete urobiť, hodíte kockami, a príbeh sa odvíja ďalej – <strong>žiadne dve hry nie sú rovnaké</strong>.<br>
         </p>
         <img src="images/table.jpg" alt="Stol" width="800" style="border-radius:15px;">
+
+        <h1 class="fade-in">Hod si kockou!</h1>
+
+        <div class="fade-in">
+          <div id="dice">20</div>
+          <button id="roll-button">Hodiť d20</button>
+        </div>
       
         <h1>Prečo to ľudia milujú?</h1>
         <p>
@@ -110,6 +117,6 @@
       
     </div>
   </main>
-
+<script src="js/main.js"></script>
 </body>
 </html>
