--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 
         <h1 class="fade-in">Hod si kockou!</h1>
 
-        <div class="fade-in">
+        <div>
           <div id="dice">20</div>
-          <button id="roll-button">Hodiť d20</button>
+          <button id="roll-button">Roll d20</button>
         </div>
       
         <h1>Prečo to ľudia milujú?</h1>
