--- a/index.html
+++ b/index.html
@@ -43,7 +43,22 @@
         </p>
         <img src="images/table.jpg" alt="Stol" width="800" style="border-radius:15px;">
 
-        <h1 class="fade-in">Hod si kockou!</h1>
+        <!-- ===== DICE ROLLER ===== -->
+        <div class="dice-box">
+          <h2>Hod kockou</h2>
+          <div class="dice-tray">
+            <button class="die" data-dice="d4">d4</button>
+            <button class="die" data-dice="d6">d6</button>
+            <button class="die" data-dice="d8">d8</button>
+            <button class="die" data-dice="d10">d10</button>
+            <button class="die" data-dice="d12">d12</button>
+            <button class="die" data-dice="d20">d20</button>
+            <button class="die" data-dice="d100">d%</button>
+          </div>
+          <div id="result">—</div>
+          <div id="details"></div>
+        </div>
+        <!-- ===== /DICE ROLLER ===== -->
       
         <h1>Prečo to ľudia milujú?</h1>
         <p>
