--- a/info.html
+++ b/info.html
@@ -61,7 +61,7 @@
         <!-- ======================== GENERÁTOR POSTAVY ========================== -->
         <!-- ===== POINT-BUY 27-bodový generátor ===== -->
         <section id="char-gen" class="char-box">
-          <h2>Vytvor si postavu – Point-Buy (27 bodov)</h2>
+          <h2>Vytvor si postavu</h2>
         
           <label>Meno:</label>
           <input type="text" id="meno" required placeholder="Napíš meno postavy">
