--- a/classes.html
+++ b/classes.html
@@ -27,7 +27,7 @@
   <main>
     <div class="content">
       <div class="race-section right">
-        <img src="images/classes/barbarian.jpg" alt="Barbarian" style="width:100px;height:100px;">
+        <img src="images/classes/barbarian.jpg" class="enlarge" alt="Barbarian" style="width:100px;height:100px;">
         <div class="race-text">
           <h1>Barbarian</h1>
           <p>
@@ -47,11 +47,11 @@
           Život barda je naplnený cestovaním, zbieraním vedomostí, rozprávaním príbehov a životom z vďaky publika – podobne ako u iných zabávačov. To, čo bardov odlišuje, je však ich hĺbka poznania a majstrovstvo v mágii.
           </p>
         </div>
-        <img src="images/classes/bard.jpg" alt="Bard" style="width:100px;height:100px;">
+        <img src="images/classes/bard.jpg" class="enlarge" alt="Bard" style="width:100px;height:100px;">
       </div>
 
       <div class="race-section right">
-        <img src="images/classes/cleric.jpg" alt="Cleric" style="width:100px;height:100px;">
+        <img src="images/classes/cleric.jpg" class="enlarge" alt="Cleric" style="width:100px;height:100px;">
         <div class="race-text">
           <h1>Cleric</h1>
           <p>
@@ -71,11 +71,11 @@
           Druidi sa starajú o krehkú ekologickú rovnováhu, ktorá udržiava život rastlín a zvierat, a veria, že ľudia by mali žiť v súlade s prírodou. Často strážia posvätné miesta alebo dohliadajú na oblasti neporušenej prírody, no keď sa objaví vážna hrozba, druidi preberajú aktívnejšiu úlohu ako dobrodruhovia, ktorí proti nej bojujú.
           </p>
         </div>
-        <img src="images/classes/druid.jpg" alt="Druid" style="width:100px;height:100px;">
+        <img src="images/classes/druid.jpg" class="enlarge" alt="Druid" style="width:100px;height:100px;">
       </div>
 
       <div class="race-section right">
-        <img src="images/classes/bojovnik.jpg" alt="Bojovnik" style="width:100px;height:100px;">
+        <img src="images/classes/bojovnik.jpg" class="enlarge" alt="Bojovnik" style="width:100px;height:100px;">
         <div class="race-text">
           <h1>Fighter</h1>
           <p>
@@ -95,11 +95,11 @@
           Mnísi zvyčajne vnímajú dobrodružstvá ako skúšky svojho fyzického a mentálneho rozvoja. Neženie ich len túžba po zabíjaní príšer a hromadení pokladov – snažia sa pretvoriť samých seba na živé zbrane.
           </p>
         </div>
-        <img src="images/classes/monk.jpg" alt="Monk" style="width:100px;height:100px;">
+        <img src="images/classes/monk.jpg" class="enlarge" alt="Monk" style="width:100px;height:100px;">
       </div>
 
       <div class="race-section right">
-        <img src="images/classes/paladin.jpg" alt="Paladin" style="width:100px;height:100px;">
+        <img src="images/classes/paladin.jpg" class="enlarge" alt="Paladin" style="width:100px;height:100px;">
         <div class="race-text">
           <h1>Paladin</h1>
           <p>
@@ -118,11 +118,11 @@
           Vďaka spojeniu s prírodou dokážu Rangers tiež vyvolávať kúzla, ktoré využívajú prapôvodné sily divočiny. Ich schopnosti a mágia sú cvičené s ostrou presnosťou, aby chránili svet pred zverstvom príšer a tyranov.
           </p>
         </div>
-        <img src="images/classes/ranger.jpg" alt="Ranger" style="width:100px;height:100px;">
+        <img src="images/classes/ranger.jpg" class="enlarge" alt="Ranger" style="width:100px;height:100px;">
       </div>
 
       <div class="race-section right">
-        <img src="images/classes/rogue.jpg" alt="Rogue" style="width:100px;height:100px;">
+        <img src="images/classes/rogue.jpg" class="enlarge" alt="Rogue" style="width:100px;height:100px;">
         <div class="race-text">
           <h1>Rogue</h1>
           <p>
@@ -142,11 +142,11 @@
           Čarodejníci sú vzácni. Niektoré rodové línie produkujú presne jedného čarodejníka v každej generácii, no väčšinou sa talent pre mágiu objaví náhodne. Ľudia, ktorí túto magickú silu majú, rýchlo zistia, že sa nedá držať potichu – mágia čarodejníka túži byť používaná.
           </p>
         </div>
-        <img src="images/classes/sorcerer.jpg" alt="Sorcerer" style="width:100px;height:100px;">
+        <img src="images/classes/sorcerer.jpg" class="enlarge" alt="Sorcerer" style="width:100px;height:100px;">
       </div>
 
       <div class="race-section right">
-        <img src="images/classes/warlock.jpg" alt="Warlock" style="width:100px;height:100px;">
+        <img src="images/classes/warlock.jpg" class="enlarge" alt="Warlock" style="width:100px;height:100px;">
         <div class="race-text">
           <h1>Warlock</h1>
           <p>
@@ -167,7 +167,7 @@
           No lákavé poznanie ťahá aj tých najmenej dobrodružných kúzelníkov z bezpečia ich knižníc a laboratórií do rozpadávajúcich sa ruín a stratených miest. Väčšina kúzelníkov verí, že ich predchodcovia v dávnych civilizáciách poznali tajomstvá mágie, ktoré sa stratili v priebehu vekov, a ich objavenie by mohlo odomknúť cestu k moci väčšej než akákoľvek mágia dostupná v súčasnej dobe.
           </p>
         </div>
-        <img src="images/classes/wizard.jpg" alt="Wizard" style="width:100px;height:100px;">
+        <img src="images/classes/wizard.jpg" class="enlarge" alt="Wizard" style="width:100px;height:100px;">
       </div>
 
       <div class="footer">
@@ -187,6 +187,6 @@
       
      </div>
   </main>
-
+<script src="main.js"></script>
 </body>
 </html>
