Add overlay div for image display

--- a/classes.html
+++ b/classes.html
@@ -188,5 +188,6 @@
      </div>
   </main>
 <script src="main.js"></script>
+<div id="overlay"><img id="overlayImg" src="" alt=""></div>
 </body>
 </html>
