--- a/classes.html
+++ b/classes.html
@@ -187,6 +187,7 @@
       
      </div>
   </main>
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <script src="main.js"></script>
 <div id="overlay"><img id="overlayImg" src="" alt=""></div>
 </body>
