--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
           </div>
           <div id="result">—</div>
           <div id="details"></div>
+          <div id="diceAnim" class="dice-face">?</div>
         </div>
         <!-- ===== /DICE ROLLER ===== -->
       
