--- a/index.html
+++ b/index.html
@@ -57,10 +57,7 @@
           </div>
           <div id="result">—</div>
           <div id="details"></div>
-          <svg id="diceAnim" class="dice-svg" viewBox="0 0 100 100">
-            <polygon class="dice-shape"/>
-            <text x="50" y="55" text-anchor="middle">?</text>
-          </svg>
+          <div id="diceAnim" class="dice-face">?</div>
         </div>
         <!-- ===== /DICE ROLLER ===== -->
       
