--- a/classes.html
+++ b/classes.html
@@ -26,7 +26,7 @@
 
   <main>
     <div class="content">
-      <div class="race-section right">
+      <div id="barbarian" class="race-section right">
         <img src="images/classes/barbarian.jpg" class="enlarge" alt="Barbarian" style="width:100px;height:100px;">
         <div class="race-text">
           <h1>Barbarian</h1>
@@ -38,7 +38,7 @@
         </div>
       </div>
       
-      <div class="race-section">
+      <div id="bard" class="race-section">
         <div class="race-text">
           <h1>Bard</h1>
           <p>
@@ -50,7 +50,7 @@
         <img src="images/classes/bard.jpg" class="enlarge" alt="Bard" style="width:100px;height:100px;">
       </div>
 
-      <div class="race-section right">
+      <div id="cleric" class="race-section right">
         <img src="images/classes/cleric.jpg" class="enlarge" alt="Cleric" style="width:100px;height:100px;">
         <div class="race-text">
           <h1>Cleric</h1>
@@ -62,7 +62,7 @@
         </div>
       </div>
 
-      <div class="race-section">
+      <div id="druid" class="race-section">
         <div class="race-text">
           <h1>Druid</h1>
           <p>
@@ -74,7 +74,7 @@
         <img src="images/classes/druid.jpg" class="enlarge" alt="Druid" style="width:100px;height:100px;">
       </div>
 
-      <div class="race-section right">
+      <div id="fighter" class="race-section right">
         <img src="images/classes/bojovnik.jpg" class="enlarge" alt="Bojovnik" style="width:100px;height:100px;">
         <div class="race-text">
           <h1>Fighter</h1>
@@ -85,7 +85,7 @@
         </div>
       </div>
 
-      <div class="race-section">
+      <div id="monk" class="race-section">
         <div class="race-text">
           <h1>Monk</h1>
           <p>
@@ -98,7 +98,7 @@
         <img src="images/classes/monk.jpg" class="enlarge" alt="Monk" style="width:100px;height:100px;">
       </div>
 
-      <div class="race-section right">
+      <div id="paladin" class="race-section right">
         <img src="images/classes/paladin.jpg" class="enlarge" alt="Paladin" style="width:100px;height:100px;">
         <div class="race-text">
           <h1>Paladin</h1>
@@ -110,7 +110,7 @@
         </div>
       </div>
 
-      <div class="race-section">
+      <div id="ranger" class="race-section">
         <div class="race-text">
           <h1>Ranger</h1>
           <p>
@@ -121,7 +121,7 @@
         <img src="images/classes/ranger.jpg" class="enlarge" alt="Ranger" style="width:100px;height:100px;">
       </div>
 
-      <div class="race-section right">
+      <div id="rogue" class="race-section right">
         <img src="images/classes/rogue.jpg" class="enlarge" alt="Rogue" style="width:100px;height:100px;">
         <div class="race-text">
           <h1>Rogue</h1>
@@ -133,7 +133,7 @@
         </div>
       </div>
 
-      <div class="race-section">
+      <div id="sorcerer" class="race-section">
         <div class="race-text">
           <h1>Sorcerer</h1>
           <p>
@@ -145,7 +145,7 @@
         <img src="images/classes/sorcerer.jpg" class="enlarge" alt="Sorcerer" style="width:100px;height:100px;">
       </div>
 
-      <div class="race-section right">
+      <div id="warlock" class="race-section right">
         <img src="images/classes/warlock.jpg" class="enlarge" alt="Warlock" style="width:100px;height:100px;">
         <div class="race-text">
           <h1>Warlock</h1>
@@ -157,7 +157,7 @@
         </div>
       </div>
 
-      <div class="race-section">
+      <div id="wizard" class="race-section">
         <div class="race-text">
           <h1>Wizard</h1>
           <p>
